[package]
name = "emissary-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
rust-ini = "0.20.0"
serde_json = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
